--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "this is an api for an ecommerce ",
   "main": "./src/app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "nodemon ./src/app.js"
   },
   "author": "Max-Gary LORDEUS",
   "license": "MIT",
@@ -13,6 +14,7 @@
     "dotenv": "^16.1.4",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.0",
+    "multer": "^1.4.5-lts.1",
     "nodemon": "^2.0.22",
     "pg": "^8.11.0",
     "swagger-jsdoc": "^6.2.8",
